[package]
name = "menu-lens"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
serde_json = "1.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
log = "0.4"
pretty_env_logger = "0.4"
uuid = "1.4.0"
erased-serde = "0.3.26"
serde = {version = "1.0.166", features = ["derive"]}
aws-config = "0.55.3"
teloxide = "0.12.2"
openssl = { version = "0.10.35", features = ["vendored"] }
ocrs = "0.3.1"

rten = { version = "0.2.0" }
rten-imageproc = { version = "0.1.0" }
rten-tensor = { version = "0.1.0" }
image = { version = "0.24.6", default-features = false, features = ["png", "jpeg", "jpeg_rayon", "webp"] }

